코드 분석 오류 수정 및 주석 간소화